<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_sec"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/meny_test_fragment" />
        <item
            android:id="@+id/nav_Check_inter"
            android:icon="@drawable/side_nav_bar"
            android:title="@string/Check_inter" />
        <item
            android:id="@+id/nav_mycalc"
            android:icon="@drawable/side_nav_bar"
            android:title="@string/mycalc" />
    </group>
</menu>